--- a/GradeTracker/math.html
+++ b/GradeTracker/math.html
@@ -75,6 +75,8 @@ body {
     <a href="history.html">History</a>
     <a href="english.html">English</a>
     <a href="math.html">Math</a>
+    <a href="compsci.html">CompSci</a>
+    <a href="tok.html">TOK</a>
   </div>
 
   <center><h2></h2> </center>
@@ -85,7 +87,7 @@ body {
   <!-- <a href="/" class="invis"> -->
       <h1>Math</h1>
     <!-- </a> -->
-    <p class="fancy-text">Integration yesterday, integration tomorrow, integration forever</p> </center>
+    <p class="fancy-text">Integration yesterday, integration today, integration forever</p> </center>
 
 
 
