--- a/GradeTracker/tok.html
+++ b/GradeTracker/tok.html
@@ -85,9 +85,9 @@ body {
 
   <center>
   <!-- <a href="/" class="invis"> -->
-      <h1>History</h1>
+      <h1>TOK</h1>
     <!-- </a> -->
-    <p class="fancy-text">Lenin's not Stalin, he's Russian</p> </center>
+    <p class="fancy-text">It all works, in theory</p> </center>
 
 
 
