--- a/GradeTracker/compsci.html
+++ b/GradeTracker/compsci.html
@@ -85,9 +85,9 @@ body {
 
   <center>
   <!-- <a href="/" class="invis"> -->
-      <h1>History</h1>
+      <h1>Comp Sci</h1>
     <!-- </a> -->
-    <p class="fancy-text">Lenin's not Stalin, he's Russian</p> </center>
+    <p class="fancy-text">Java has had a real chip on his shoulder ever since he got that c+ on the math test</p> </center>
 
 
 
