--- a/GradeTracker/homepg.html
+++ b/GradeTracker/homepg.html
@@ -75,6 +75,8 @@ body {
     <a href="history.html">History</a>
     <a href="english.html">English</a>
     <a href="math.html">Math</a>
+    <a href="compsci.html">CompSci</a>
+    <a href="tok.html">TOK</a>
   </div>
 
   <center><h2></h2> </center>
