--- a/GradeTracker/homepg.html
+++ b/GradeTracker/homepg.html
@@ -83,6 +83,10 @@ body {
   <p></p>
   <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
 
+<center>
+    <h1> Welcome to the Grade Tracker! </h1>
+    <p> Simply input your grades and get your average </p>
+
   <script>
   function openNav() {
       document.getElementById("mySidenav").style.width = "250px";
@@ -90,6 +94,7 @@ body {
   function closeNav() {
       document.getElementById("mySidenav").style.width = "0";
   }
+
   </script>
 
 </body>
